<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/user_profile_fragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/app_default_bar"
            app:title="Профиль"
            android:theme="@style/Theme.FitDiary"
            android:background="@color/primaryColor"
            android:minHeight="?attr/actionBarSize"
            style="@style/Widget.Material3.ActionBar.Solid"
            android:layout_width="match_parent"
            app:titleTextColor="@color/white"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/to_settings"
            android:text="@string/profile_settings"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/app_default_bar" />

        <View
            app:layout_constraintTop_toBottomOf="@id/to_settings"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/to_preferences"
            android:text="@string/profile_preferences"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/to_settings" />

        <View
            app:layout_constraintTop_toBottomOf="@id/to_preferences"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/to_overview"
            android:text="@string/profile_overview"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@id/to_preferences" />
        <View
            app:layout_constraintTop_toBottomOf="@id/to_overview"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
